# voxelmap

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.in
docs/source/: api.rst  conf.py  imagemesh.rst  index.rst  installation.rst  io.rst  mesh.rst  usage.rst
docs/source/examples/: meshrec.rst  skull.rst
examples/: cake.py  custom_palette.py  custom_palette_pyvista.py  gradient.py  hello_pyvista.py  hello_world.py
voxelmap/: __init__.py  mesh.py
voxelmap/mesh/: meshgen.py
