[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxelmap"
version = "5.0.0"
description = "A modular Python library for making voxel and 3D models from NumPy arrays."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

authors = [
  { name = "Andrew Garcia", email = "garcia.gtr@gmail.com" }
]

dependencies = [
  "numpy>=1.25",         # 1.25+ supports Python 3.12
  "matplotlib>=3.8"      # 3.8+ supports Python 3.12
]

[project.optional-dependencies]
io = [
  "pandas>=2.1"          # 2.1+ supports Python 3.12
]
mesh = [
  "pyvista>=0.44",       # modern pyvista, 3.12-compatible
  "scikit-image>=0.22",  # 0.22+ supports Python 3.12
  "opencv-python>=4.8",  # 4.8+ has wheels for 3.12
  "scipy>=1.11"          # 1.11+ supports Python 3.12
]
all = [
  "pandas>=2.1",
  "pyvista>=0.44",
  "scikit-image>=0.22",
  "opencv-python>=4.8",
  "scipy>=1.11"
]

[tool.setuptools]
packages = ["voxelmap"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
